# fastapi-mongodb-base

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: user.py
app/core/: config.py  security.py
app/crud/: base.py  crud_user.py
app/db/: database.py
app/models/: user.py
app/schemas/: __init__.py  auth_user.py  user.py
app/utils/: __init__.py  uuid_missing.py
app/utils/exceptions/: general.py
